<resources>
    <string name="app_name">ToDoListApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="welcome_to_todolistapp">Welcome to ToDoListApp</string>
    <string name="welcome">Welcome!!</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="Login">Login</string>
    <string name="hello">Hello!!</string>
    <string name="projects">Projects</string>
    <string name="sign_out">Sign Out</string>
    <string name="open">Open</string>
    <string name="user_profile">User Profile</string>
    <string name="user">User</string>
    <string name="add_input">Add Input</string>
    <string name="add_a_new_project">Add a new Project</string>
    <string name="project_name">Project Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="textview">Start Date:-</string>
    <string name="textview2">End Date:-</string>
    <string name="textview3">Project Name:-</string>
    <string name="tasks">Tasks</string>
</resources>